--- a/auswertung.html
+++ b/auswertung.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <h1>Auswertung: kevin</h1>
-        <h2>Februar 2013 bis Dezember 2014</h2>
+        <h2>Jänner 2013 bis Dezember 2014</h2>
         <div>
             <h4>Mai 2013</h4>
             <table>
