Jo, so ziemlich Fertig bis auf die Formatierung.

--- a/auswertung.html
+++ b/auswertung.html
@@ -1,421 +1,139 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <html>
-    <head>
-        <title>Auswertung: kevin</title>
-        <link href="./format.css" rel="stylesheet" type="text/css"/>
-    </head>
-    <body>
-        <h1>Auswertung: kevin</h1>
-        <h2>JÃ¤nner 2013 bis Dezember 2014</h2>
-        <div>
-            <h4>Mai 2013</h4>
-            <table>
-                <tr>
-                    <td font-weight="bold">Datum</td>
-                    <td font-weight="bold">Arbeitsbeginn</td>
-                    <td font-weight="bold">Arbeitsende</td>
-                    <td font-weight="bold">Mitagspause</td>
-                    <td font-weight="bold">Arbeitsstunden</td>
-                    <td font-weight="bold">Ueberstunden</td>
-                    <td font-weight="bold">Anmerkung</td>
-                </tr>
-                <tr>
-                    <td datum="10.05.2013">10.05.2013</td>
-                    <td beginn="08:00">08:00</td>
-                    <td ende="17:00">17:00</td>
-                    <td pause="00:30">00:30</td>
-                    <td arbeitsstunden="08:30">08:30</td>
-                    <td>0.5</td>
-                    <td>Arbeitstag</td>
-                </tr>
-                <tr>
-                    <td datum="11.05.2013">11.05.2013</td>
-                    <td beginn="06:00">06:00</td>
-                    <td ende="18:30">18:30</td>
-                    <td pause="00:30">00:30</td>
-                    <td arbeitsstunden="12:00">12:00</td>
-                    <td>4.0</td>
-                    <td>Arbeitstag</td>
-                </tr>
-                <tr>
-                    <td datum="12.05.2013">12.05.2013</td>
-                    <td beginn="06:00">06:00</td>
-                    <td ende="18:30">18:30</td>
-                    <td pause="00:30">00:30</td>
-                    <td arbeitsstunden="12:00">12:00</td>
-                    <td>4.0</td>
-                    <td>Arbeitstag</td>
-                </tr>
-                <tr>
-                    <td datum="13.05.2013">13.05.2013</td>
-                    <td beginn="00:00">00:00</td>
-                    <td ende="00:00">00:00</td>
-                    <td pause="00:00">00:00</td>
-                    <td arbeitsstunden="00:00">00:00</td>
-                    <td>0.0</td>
-                    <td>Feiertag</td>
-                </tr>
-                <tr>
-                    <td datum="14.05.2013">14.05.2013</td>
-                    <td beginn="00:00">00:00</td>
-                    <td ende="00:00">00:00</td>
-                    <td pause="00:00">00:00</td>
-                    <td arbeitsstunden="00:00">00:00</td>
-                    <td>0.0</td>
-                    <td>Krankenstand</td>
-                </tr>
-                <tr>
-                    <td datum="15.05.2013">15.05.2013</td>
-                    <td beginn="00:00">00:00</td>
-                    <td ende="00:00">00:00</td>
-                    <td pause="00:00">00:00</td>
-                    <td arbeitsstunden="00:00">00:00</td>
-                    <td>0.0</td>
-                    <td>Urlaub</td>
-                </tr>
-                <tr>
-                    <td datum="16.05.2013">16.05.2013</td>
-                    <td beginn="00:00">00:00</td>
-                    <td ende="00:00">00:00</td>
-                    <td pause="00:00">00:00</td>
-                    <td arbeitsstunden="00:00">00:00</td>
-                    <td>-8.0</td>
-                    <td>Zeitausgleich</td>
-                </tr>
-                <tr>
-                    <td datum="17.05.2013">17.05.2013</td>
-                    <td beginn="08:00">08:00</td>
-                    <td ende="17:00">17:00</td>
-                    <td pause="00:30">00:30</td>
-                    <td arbeitsstunden="08:30">08:30</td>
-                    <td>0.5</td>
-                    <td>Arbeitstag</td>
-                </tr>
-                <tr>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td>Summe</td>
-                    <td>1.0</td>
-                </tr>
-                <tr>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td>Uebertrag</td>
-                    <td>0.0</td>
-                </tr>
-                <tr>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td>GESAMT</td>
-                    <td>1.0</td>
-                </tr>
-            </table>
-            <h4>Juni 2013</h4>
-            <table>
-                <tr>
-                    <td font-weight="bold">Datum</td>
-                    <td font-weight="bold">Arbeitsbeginn</td>
-                    <td font-weight="bold">Arbeitsende</td>
-                    <td font-weight="bold">Mitagspause</td>
-                    <td font-weight="bold">Arbeitsstunden</td>
-                    <td font-weight="bold">Ueberstunden</td>
-                    <td font-weight="bold">Anmerkung</td>
-                </tr>
-                <tr>
-                    <td datum="01.06.2013">01.06.2013</td>
-                    <td beginn="08:00">08:00</td>
-                    <td ende="16:30">16:30</td>
-                    <td pause="00:30">00:30</td>
-                    <td arbeitsstunden="08:00">08:00</td>
-                    <td>0.0</td>
-                    <td>Arbeitstag</td>
-                </tr>
-                <tr>
-                    <td datum="02.06.2013">02.06.2013</td>
-                    <td beginn="08:00">08:00</td>
-                    <td ende="17:30">17:30</td>
-                    <td pause="00:45">00:45</td>
-                    <td arbeitsstunden="08:45">08:45</td>
-                    <td>0.75</td>
-                    <td>Arbeitstag</td>
-                </tr>
-                <tr>
-                    <td datum="03.06.2013">03.06.2013</td>
-                    <td beginn="08:00">08:00</td>
-                    <td ende="16:00">16:00</td>
-                    <td pause="00:45">00:45</td>
-                    <td arbeitsstunden="07:15">07:15</td>
-                    <td>-0.75</td>
-                    <td>Arbeitstag</td>
-                </tr>
-                <tr>
-                    <td datum="04.06.2013">04.06.2013</td>
-                    <td beginn="00:00">00:00</td>
-                    <td ende="00:00">00:00</td>
-                    <td pause="00:00">00:00</td>
-                    <td arbeitsstunden="00:00">00:00</td>
-                    <td>0.0</td>
-                    <td>Feiertag</td>
-                </tr>
-                <tr>
-                    <td datum="05.06.2013">05.06.2013</td>
-                    <td beginn="00:00">00:00</td>
-                    <td ende="00:00">00:00</td>
-                    <td pause="00:00">00:00</td>
-                    <td arbeitsstunden="00:00">00:00</td>
-                    <td>0.0</td>
-                    <td>Krankenstand</td>
-                </tr>
-                <tr>
-                    <td datum="06.06.2013">06.06.2013</td>
-                    <td beginn="00:00">00:00</td>
-                    <td ende="00:00">00:00</td>
-                    <td pause="00:00">00:00</td>
-                    <td arbeitsstunden="00:00">00:00</td>
-                    <td>0.0</td>
-                    <td>Urlaub</td>
-                </tr>
-                <tr>
-                    <td datum="07.06.2013">07.06.2013</td>
-                    <td beginn="00:00">00:00</td>
-                    <td ende="00:00">00:00</td>
-                    <td pause="00:00">00:00</td>
-                    <td arbeitsstunden="00:00">00:00</td>
-                    <td>-8.0</td>
-                    <td>Zeitausgleich</td>
-                </tr>
-                <tr>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td>Summe</td>
-                    <td>-8.0</td>
-                </tr>
-                <tr>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td>Uebertrag</td>
-                    <td>1.0</td>
-                </tr>
-                <tr>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td>GESAMT</td>
-                    <td>-7.0</td>
-                </tr>
-            </table>
-            <h4>September 2013</h4>
-            <table>
-                <tr>
-                    <td font-weight="bold">Datum</td>
-                    <td font-weight="bold">Arbeitsbeginn</td>
-                    <td font-weight="bold">Arbeitsende</td>
-                    <td font-weight="bold">Mitagspause</td>
-                    <td font-weight="bold">Arbeitsstunden</td>
-                    <td font-weight="bold">Ueberstunden</td>
-                    <td font-weight="bold">Anmerkung</td>
-                </tr>
-                <tr>
-                    <td datum="01.09.2013">01.09.2013</td>
-                    <td beginn="08:00">08:00</td>
-                    <td ende="17:00">17:00</td>
-                    <td pause="00:30">00:30</td>
-                    <td arbeitsstunden="08:30">08:30</td>
-                    <td>0.5</td>
-                    <td>Arbeitstag</td>
-                </tr>
-                <tr>
-                    <td datum="02.09.2013">02.09.2013</td>
-                    <td beginn="06:00">06:00</td>
-                    <td ende="17:00">17:00</td>
-                    <td pause="00:30">00:30</td>
-                    <td arbeitsstunden="10:30">10:30</td>
-                    <td>2.5</td>
-                    <td>Arbeitstag</td>
-                </tr>
-                <tr>
-                    <td datum="03.09.2013">03.09.2013</td>
-                    <td beginn="06:00">06:00</td>
-                    <td ende="19:00">19:00</td>
-                    <td pause="00:30">00:30</td>
-                    <td arbeitsstunden="12:30">12:30</td>
-                    <td>4.5</td>
-                    <td>Arbeitstag</td>
-                </tr>
-                <tr>
-                    <td datum="04.09.2013">04.09.2013</td>
-                    <td beginn="06:00">06:00</td>
-                    <td ende="19:00">19:00</td>
-                    <td pause="00:30">00:30</td>
-                    <td arbeitsstunden="12:30">12:30</td>
-                    <td>4.5</td>
-                    <td>Arbeitstag</td>
-                </tr>
-                <tr>
-                    <td datum="05.09.2013">05.09.2013</td>
-                    <td beginn="00:00">00:00</td>
-                    <td ende="00:00">00:00</td>
-                    <td pause="00:00">00:00</td>
-                    <td arbeitsstunden="00:00">00:00</td>
-                    <td>0.0</td>
-                    <td>Feiertag</td>
-                </tr>
-                <tr>
-                    <td datum="06.09.2013">06.09.2013</td>
-                    <td beginn="00:00">00:00</td>
-                    <td ende="00:00">00:00</td>
-                    <td pause="00:00">00:00</td>
-                    <td arbeitsstunden="00:00">00:00</td>
-                    <td>0.0</td>
-                    <td>Krankenstand</td>
-                </tr>
-                <tr>
-                    <td datum="07.09.2013">07.09.2013</td>
-                    <td beginn="00:00">00:00</td>
-                    <td ende="00:00">00:00</td>
-                    <td pause="00:00">00:00</td>
-                    <td arbeitsstunden="00:00">00:00</td>
-                    <td>0.0</td>
-                    <td>Urlaub</td>
-                </tr>
-                <tr>
-                    <td datum="08.09.2013">08.09.2013</td>
-                    <td beginn="00:00">00:00</td>
-                    <td ende="00:00">00:00</td>
-                    <td pause="00:00">00:00</td>
-                    <td arbeitsstunden="00:00">00:00</td>
-                    <td>-8.0</td>
-                    <td>Zeitausgleich</td>
-                </tr>
-                <tr>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td>Summe</td>
-                    <td>4.0</td>
-                </tr>
-                <tr>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td>Uebertrag</td>
-                    <td>-7.0</td>
-                </tr>
-                <tr>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td>GESAMT</td>
-                    <td>-3.0</td>
-                </tr>
-            </table>
-            <h4>Februar 2014</h4>
-            <table>
-                <tr>
-                    <td font-weight="bold">Datum</td>
-                    <td font-weight="bold">Arbeitsbeginn</td>
-                    <td font-weight="bold">Arbeitsende</td>
-                    <td font-weight="bold">Mitagspause</td>
-                    <td font-weight="bold">Arbeitsstunden</td>
-                    <td font-weight="bold">Ueberstunden</td>
-                    <td font-weight="bold">Anmerkung</td>
-                </tr>
-                <tr>
-                    <td datum="01.02.2014">01.02.2014</td>
-                    <td beginn="10:00">10:00</td>
-                    <td ende="20:00">20:00</td>
-                    <td pause="00:30">00:30</td>
-                    <td arbeitsstunden="09:30">09:30</td>
-                    <td>1.5</td>
-                    <td>Arbeitstag</td>
-                </tr>
-                <tr>
-                    <td datum="02.02.2014">02.02.2014</td>
-                    <td beginn="00:00">00:00</td>
-                    <td ende="00:00">00:00</td>
-                    <td pause="00:00">00:00</td>
-                    <td arbeitsstunden="00:00">00:00</td>
-                    <td>0.0</td>
-                    <td>Feiertag</td>
-                </tr>
-                <tr>
-                    <td datum="03.02.2014">03.02.2014</td>
-                    <td beginn="00:00">00:00</td>
-                    <td ende="00:00">00:00</td>
-                    <td pause="00:00">00:00</td>
-                    <td arbeitsstunden="00:00">00:00</td>
-                    <td>0.0</td>
-                    <td>Krankenstand</td>
-                </tr>
-                <tr>
-                    <td datum="04.02.2014">04.02.2014</td>
-                    <td beginn="00:00">00:00</td>
-                    <td ende="00:00">00:00</td>
-                    <td pause="00:00">00:00</td>
-                    <td arbeitsstunden="00:00">00:00</td>
-                    <td>0.0</td>
-                    <td>Urlaub</td>
-                </tr>
-                <tr>
-                    <td datum="05.02.2014">05.02.2014</td>
-                    <td beginn="00:00">00:00</td>
-                    <td ende="00:00">00:00</td>
-                    <td pause="00:00">00:00</td>
-                    <td arbeitsstunden="00:00">00:00</td>
-                    <td>-8.0</td>
-                    <td>Zeitausgleich</td>
-                </tr>
-                <tr>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td>Summe</td>
-                    <td>-6.5</td>
-                </tr>
-                <tr>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td>Uebertrag</td>
-                    <td>-3.0</td>
-                </tr>
-                <tr>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td/>
-                    <td>GESAMT</td>
-                    <td>-9.5</td>
-                </tr>
-            </table>
-        </div>
-    </body>
+<head>
+<link rel="stylesheet" type="text/css" href="format.css">
+</head>
+<body>
+<h1>kevin Jänner 2013-Dezember 2014 Keyword: %</h1>
+<h2>Bereich-Zentrum</h2>
+<table>
+<tr>
+<td>Datum</td> <td>Beschreibung</td> <td>Dauer</td>
+</tr>
+<tr>
+<td>19.05.2013</td><td>A:Aufgabe</td><td>150</td>
+</tr>
+<tr>
+<td>03.06.2013</td><td>A:Aufgabe</td><td>270</td>
+</tr>
+<tr>
+<td></td><td>SUMME</td><td>420</td>
+</tr>
+</table>
+<h2>Bereich-Bewusstseinsbildung</h2>
+<table>
+<tr>
+<td>Datum</td> <td>Beschreibung</td> <td>Dauer</td>
+</tr>
+<tr>
+<td>03.06.2013</td><td>B:Aufgabe</td><td>180</td>
+</tr>
+<tr>
+<td></td><td>SUMME</td><td>180</td>
+</tr>
+</table>
+<h2>Bereich-Pre-Incubation</h2>
+<table>
+<tr>
+<td>Datum</td> <td>Beschreibung</td> <td>Dauer</td>
+</tr>
+<tr>
+<td>01.09.2013</td><td>C:Aufgabe</td><td>150</td>
+</tr>
+<tr>
+<td></td><td>SUMME</td><td>150</td>
+</tr>
+</table>
+<h2>Bereich-Incubation</h2>
+<table>
+<tr>
+<td>Datum</td> <td>Beschreibung</td> <td>Dauer</td>
+</tr>
+<tr>
+<td>19.05.2013</td><td>B:Aufgabe</td><td>210</td>
+</tr>
+<tr>
+<td>20.05.2013</td><td>B:Aufgabe</td><td>90</td>
+</tr>
+<tr>
+<td>05.09.2013</td><td>A:Aufgabe</td><td>210</td>
+</tr>
+<tr>
+<td></td><td>SUMME</td><td>510</td>
+</tr>
+</table>
+<h2>Bereich-Alumni</h2>
+<table>
+<tr>
+<td>Datum</td> <td>Beschreibung</td> <td>Dauer</td>
+</tr>
+<tr>
+<td>19.05.2013</td><td>A:Aufgabe</td><td>90</td>
+</tr>
+<tr>
+<td>20.05.2013</td><td>A:Aufgabe</td><td>150</td>
+</tr>
+<tr>
+<td>05.09.2013</td><td>C:Aufgabe</td><td>210</td>
+</tr>
+<tr>
+<td></td><td>SUMME</td><td>450</td>
+</tr>
+</table>
+<h2>Bereich-Finanzierung</h2>
+<table>
+<tr>
+<td>Datum</td> <td>Beschreibung</td> <td>Dauer</td>
+</tr>
+<tr>
+<td>01.09.2013</td><td>A:Aufgabe</td><td>210</td>
+</tr>
+<tr>
+<td></td><td>SUMME</td><td>210</td>
+</tr>
+</table>
+<h2>Bereich-HR</h2>
+<table>
+<tr>
+<td>Datum</td> <td>Beschreibung</td> <td>Dauer</td>
+</tr>
+<tr>
+<td>05.09.2013</td><td>B:Aufgabe</td><td>60</td>
+</tr>
+<tr>
+<td></td><td>SUMME</td><td>60</td>
+</tr>
+</table>
+<h2>Bereich-IPR</h2>
+<table>
+<tr>
+<td>Datum</td> <td>Beschreibung</td> <td>Dauer</td>
+</tr>
+<tr>
+<td>20.05.2013</td><td>C:Aufgabe</td><td>150</td>
+</tr>
+<tr>
+<td></td><td>SUMME</td><td>150</td>
+</tr>
+</table>
+<h2>Bereich-Non-AplusB</h2>
+<table>
+<tr>
+<td>Datum</td> <td>Beschreibung</td> <td>Dauer</td>
+</tr>
+<tr>
+<td></td><td>SUMME</td><td>0</td>
+</tr>
+</table>
+<h2>Bereich-Abwesenheit</h2>
+<table>
+<tr>
+<td>Datum</td> <td>Beschreibung</td> <td>Dauer</td>
+</tr>
+<tr>
+<td></td><td>SUMME</td><td>0</td>
+</tr>
+</table>
+<br >
+<br >
+</body>
 </html>
